Question no longer overlaps answers

--- a/prototype/css/style.css
+++ b/prototype/css/style.css
@@ -60,10 +60,16 @@ body.blur .wrapper {
     left: 85px;
 }
 body.falseBg {
-    background: #e74c3c;
+    background-color: #e74c3c;
+}
+body.falseBg .answers { /* Temporary test */
+/*    background-color: #c0392b;*/
 }
 body.correctBg {
-    background: #2ecc71;
+    background-color: #2ecc71;
+}
+body.correctBg .answers { /* Temporary test */
+/*    background-color: #27ae60;*/
 }
 .page {
 }
@@ -72,17 +78,27 @@ body.correctBg {
 .question {
     position: relative;
     width: 100%;
-    height: 30%;
+/*    height: 30%;*/
+    min-height: 50%;
     text-align: center;
-    padding-top: 50px;
+    padding: 5rem 4rem 0 4rem;
+    box-sizing: border-box;
     color: rgba(0, 0, 0, .7);
     
     display: flex;
     flex-direction: column;
     justify-content: center;
 }
+@media screen and (min-width: 800px) {
+    .question {
+        max-width: 800px;
+        margin-left: auto;
+        margin-right: auto;
+    }
+}
 .question p {
-    margin: 3rem;
+/*    margin: 3rem;*/
+    margin: 0;
     font-size: 2em;
 }
 .question #character,
@@ -97,7 +113,8 @@ body.correctBg {
 .answers {
     position: relative;
     width: 100%;
-    height: 70%
+/*    height: 70%;*/
+    max-height: 50;
 }
 .answer {
     position: relative;
@@ -112,9 +129,10 @@ body.correctBg {
     justify-content: center;
 }
 .answer p {
-    margin: 3rem;
-    word-spacing: 30000px; /* Forced word-wrap fix */
+    margin: 1rem 10%;
+/*    word-spacing: 30000px; /* Forced word-wrap fix */
     font-size: 2em;
+    width: 80%;
 }
 .answer.left {
 }
